# btest

./: .clang-format  .clang-tidy  .gitignore  CMakeHelper.cmake  CMakeLists.txt  LICENSE  README.md  count.sh
BTest/: CMakeLists.txt
BTest/BTestApp/: CMakeLists.txt
BTest/BTestApp/Source/: CliAppState.cpp  CliAppState.hpp  CommandBase.cpp  CommandBase.hpp  main.cpp
BTest/BTestApp/Test/: CliTest.cpp
BTest/ECSApp/: CMakeLists.txt
BTest/ECSApp/Include/ECSApp/: CLI.hpp  ECSAppAPI.hpp
BTest/ECSApp/Source/: ActionManager.cpp  ActionManager.hpp  ActionObject.hpp  AppInstance.cpp  AppInstance.hpp  MoveAction.hpp  PrintableInterface.hpp  ToggleAction.hpp
BTest/ECSApp/Test/: AddRemoveEntityTest.cpp  AddRemoveManagerTest.cpp
BTest/ECSCore/: CMakeLists.txt
BTest/ECSCore/Include/ECSCore/: Entity.hpp  EntityManager.hpp  Object.hpp  ObjectManager.hpp
BTest/ECSCore/Source/: Entity.cpp  EntityManager.cpp  Object.cpp  ObjectManager.cpp
BTest/ECSCore/Test/: AttachObjectWithoutManagerTest.cpp  CMakeLists.txt  CreateEntityTest.cpp  DeleteEntityTest.cpp  ManagerCreateDeleteTest.cpp  ManagerCreateDeleteTestSparsedArray.cpp  ObjectCreateDeleteTest.cpp  ObjectCreateDeleteTestSparsedArray.cpp  ObjectTest.cpp
BTest/FunLib/: CMakeLists.txt
BTest/FunLib/Include/FunLib/: ContainerInterface.hpp  DynamicArrayContainer.hpp  SparsedArrayContainer.hpp
BTest/TestModule/: CMakeLists.txt
BTest/TestModule/Source/: AddEntityTest.cpp  RemoveEntityTest.cpp  main.cpp
Documentation/: Architecture.md  Results.md
btestapp/: CMakeLists.txt
